--- a/index1.html
+++ b/index1.html
@@ -10,8 +10,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/style2.css" />
   </head>
+
   <body>
     <!-- ======================nav============== -->
     <nav class="navbar navbar-default navbar-fixed-top bg-dark">
@@ -41,7 +43,7 @@
         <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
       </svg>
     </nav>
-    <!-- ===================== -->
+    <!-- =============bannnar============== -->
     <section class="bannar-in">
       <div class="bannar-text">
         <div class="text-in">
