--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style2.css" />
-    <link rel="stylesheet" href="./css/">
+<link rel="stylesheet" href="./css/qwqs.css">
+<link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!-- ======================nav============== -->
