--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="./css/qwqs.css">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style2.css">
   </head>
   <body>
     <!-- ======================nav============== -->
