--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </nav>
     <nav
-      class="navbar navbar-default navbar-fixed-top-2 bg-warning-subtle d-flex p-3"
+      class="navbar navbar-default navbar-fixed-top-2 bg-warning-subtle d-flex px-3"
     >
       <a class="text-decoration-none" href="">
         <div class="m-div">
