--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- ======================nav============== -->
-    <nav class="navbar navbar-default navbar-fixed-top bg-dark">
+    <nav class="navbar navbar-default  bg-dark z-2">
       <div class="container-fluid">
         <img
           class="logo-in"
@@ -25,32 +25,24 @@
       </div>
     </nav>
     <nav
-      class="navbar navbar-default navbar-fixed-top-2 bg-warning-subtle d-flex px-3"
+      class="navbar navbar-default navbar-fixed-top-2 mt-2 d-flex px-3"
     >
       <a class="text-decoration-none" href="">
         <div class="m-div">
           <p class="fs-1 fw-bold text-black top-100">M</p>
         </div></a
       >
-      <svg
-        class="custom-icon"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-      >
-        <title>menu</title>
-        <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-      </svg>
+      <button class="btn btn-primary rounded-5">Start Naw
+      </button>
     </nav>
     <!-- ===================== -->
-    <section class="bannar-in">
+    <section class="bannar-in mt-5">
       <div class="bannar-text">
         <div class="text-in">
-          <p class="heading">- --The power of-- -</p>
-          <p class="heading">Technology</p>
+          <p class="heading">- --Transform Your -- -</p>
+          <p class="heading">Ideas in Reality</p>
           <p class="heading-p">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            vel error deleniti obcaecati veniam distinctio eaque, perspiciatis
-            expedita architecto cum nihil quo
+            We are a small group where all shares some motives, culture & virtue 
           </p>
           <button type="button" class="btn btn-warning text-white rounded-pill">
             Learn More
@@ -76,21 +68,22 @@
     </section>
     <!-- =================== -->
     <section class="custom-section-card">
-      <div class="row-gap-5 d-flex flex-wrap justify-content-around">
+     <div class="container">     
+      <div class="row-gap-5 d-flex flex-wrap justify-content-between">
         <a href=""
-          ><img class="custom-image hover-img" src="./assets/card1.jpg" alt=""
+          ><img class="custom-image hover-img" src="./assets/bangali meat.png" alt=""
         /></a>
         <a href="">
-          <img class="custom-image hover-img" src="./assets/card2.jpg" alt=""
+          <img class="custom-image hover-img" src="./assets/bangladesh-army.png" alt=""
         /></a>
         <a href="">
-          <img class="custom-image hover-img" src="./assets/card3.jpg" alt=""
+          <img class="custom-image hover-img mb-5" src="./assets/dell.svg" alt=""
         /></a>
         <a href="">
-          <img class="custom-image hover-img" src="./assets/card4.jpg" alt=""
+          <img class="custom-image hover-img" src="./assets/rebuy.webp" alt=""
         /></a>
         <a href="">
-          <img class="custom-image hover-img" src="./assets/card5.jpg" alt=""
+          <img class="custom-image hover-img" src="./assets/bostondynamics.png" alt=""
         /></a>
         <a href="">
           <img class="custom-image hover-img" src="./assets/card6.jpg" alt=""
@@ -104,7 +97,7 @@
         <a href="">
           <img class="custom-image hover-img" src="./assets/card9.jpg" alt=""
         /></a>
-      </div>
+      </div></div>
     </section>
     <!-- ======================== -->
     <section class="heading-div">
