--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="./css/style2.css">
+<link rel="stylesheet" href="./css/qwqs.css">
   </head>
   <body>
     <!-- ======================nav============== -->
@@ -48,7 +49,7 @@
             Learn More
           </button>
           <button type="button" class="btn btn-outline-info rounded-pill m-3">
-            Get Started Now
+            Get Started 
           </button>
         </div>
       </div>
@@ -69,14 +70,14 @@
     <!-- =================== -->
     <section class="custom-section-card">
      <div class="container">     
-      <div class="row-gap-5 d-flex flex-wrap justify-content-between">
-        <a href=""
-          ><img class="custom-image hover-img" src="./assets/bangali meat.png" alt=""
+       <div class="row-gap-4 d-flex flex-wrap justify-content-around">
+        <a class="custom-image"  href="">
+          <img class="custom-image hover-img" src="./assets/bangali meat.png" alt=""
         /></a>
-        <a href="">
+        <a class="custom-image"  href="">
           <img class="custom-image hover-img" src="./assets/bangladesh-army.png" alt=""
         /></a>
-        <a href="">
+        <a class="custom-image"  href="">
           <img class="custom-image hover-img mb-5" src="./assets/dell.svg" alt=""
         /></a>
         <a href="">
@@ -97,7 +98,8 @@
         <a href="">
           <img class="custom-image hover-img" src="./assets/card9.jpg" alt=""
         /></a>
-      </div></div>
+        </div>
+     </div>
     </section>
     <!-- ======================== -->
     <section class="heading-div">
@@ -110,7 +112,7 @@
     <section>
       <div class="container mb-5">
         <section class="custom-section-card">
-          <div class="row-gap-5 d-flex flex-wrap justify-content-around">
+          <div class="row-gap-5 column-gap-5 d-flex flex-wrap justify-content-around">
             <div class="col col-md-3">
               <div
                 class="card h-100 border border-1 border-secondary border-opacity-10 hover-img"
